--- a/Agents/FeatureInfoAgent/code/pom.xml
+++ b/Agents/FeatureInfoAgent/code/pom.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cmclinnovations</groupId>
     <artifactId>feature-info-agent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    
+
     <!-- Project properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        
+
         <!-- Version of the JPS Base Library to use -->
         <jps.base.version>1.11.3</jps.base.version>
     </properties>
-    
+
     <!-- Parent POM -->
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
         <version>1.0.0</version>
     </parent>
-    
+
     <!-- Profiles are used to switch between building for development and production 
     environments. Use "-P profile-id" within an mvn command to build with a profile -->
     <profiles>
@@ -40,7 +38,7 @@
                 <log.artifact>java-logging-dev</log.artifact>
             </properties>
         </profile>
-        
+
         <!-- This profile should be used for production builds. -->
         <profile>
             <id>prod-profile</id>
@@ -50,10 +48,10 @@
             </properties>
         </profile>
     </profiles>
-    
+
     <build>
         <plugins>
-            
+
             <!-- Compile and build with Java 11 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -64,14 +62,14 @@
                     <target>11</target>
                 </configuration>
             </plugin>
-            
+
             <!-- Allows maven executions -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
             </plugin>
-            
+
             <!-- Used to execute unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -79,7 +77,7 @@
                 <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
                 <version>2.22.0</version>
             </plugin>
-                        
+
             <!-- Used to build into a WAR file and ensures everything in ./WEB-INF
             gets copied into the final WAR file's internal WEB-INF directory. -->
             <plugin>
@@ -88,7 +86,7 @@
                 <!-- Version, configuration, and executions should be pulled from the 
                 parent POM unless overridden here. -->
             </plugin>
-            
+
             <!-- Downloads and extracts ZIP archives from Maven repository -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -96,26 +94,26 @@
                 <!-- Version, configuration, and executions should be pulled from the 
                 parent POM unless overridden here. -->
             </plugin>
-            
+
         </plugins>
     </build>
-    
+
     <!-- Dependencies -->
     <dependencies>
-        
+
         <!-- JPS Base Library -->
         <dependency>
             <groupId>uk.ac.cam.cares.jps</groupId>
             <artifactId>jps-base-lib</artifactId>
             <version>${jps.base.version}</version>
         </dependency>
-        
+
         <!-- Java servlet API, version pulled from parent -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
-        
+
         <!-- JSON handling -->
         <dependency>
             <groupId>org.json</groupId>
@@ -123,7 +121,7 @@
             <version>20220320</version>
             <type>jar</type>
         </dependency>
-        
+
         <!-- Logging, versions pulled from parent -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -137,7 +135,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
         </dependency>
-        
+
         <!-- Testing, versions pulled from parent -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -147,7 +145,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
-       
+
         <!-- Common IO utilities -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -162,11 +160,11 @@
             <version>3.0.0</version>
         </dependency>
 
-         <!-- For interacting with TheStack -->
-         <dependency>
+        <!-- For interacting with TheStack -->
+        <dependency>
             <groupId>com.cmclinnovations</groupId>
             <artifactId>stack-clients</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.2.0</version>
         </dependency>
 
     </dependencies>
