--- a/Deploy/stacks/ontop+geoserver/data_sets/ord/ord2csv/Dockerfile
+++ b/Deploy/stacks/ontop+geoserver/data_sets/ord/ord2csv/Dockerfile
@@ -8,13 +8,16 @@ RUN apt-get -qq update
 
 # Copy in entrypoint script, upload script
 COPY ./entrypoint.sh .
-COPY ./ord2csv.sh .doc
+COPY ./ord2csv.sh .
 COPY ./ord2csv.py .
 COPY ./schema2labels.py .
 COPY ./requirements.txt . 
 
 # Install prerequisite python packages
 RUN pip install -r requirements.txt
+
+# Specifying Volumes
+VOLUME results inputs
 
 # Run the upload script, via the entrypoint script
 ENTRYPOINT /entrypoint.sh
