--- a/Agents/MetOfficeAgent/docker-compose.yml
+++ b/Agents/MetOfficeAgent/docker-compose.yml
@@ -1,32 +1,33 @@
 version: "3.8"
 
 services:
-  metoffice_agent_debug:
-    container_name: metoffice_agent_debug
-    image: docker.cmclinnovations.com/metoffice_agent_debug:1.0.0-SNAPSHOT
-    build:
-      # Path to dockerfile ('.' represents current directory with .yml file)
-      context: .
-      target: debug
-    ports:
-      # Mapping of container port to host (host:container)
-      - "5000:5000"
-      - "5678:5678"
-    volumes:
-      # Link container working dir with local dir to allow flask hot-reload functionality
-      # Link container output directory to local directory to access output files
-      # (local dir : dir in container)
-      - ./metoffice:/app/metoffice      
-      - ./output:/app/output
-  
-  metoffice_agent_production:
-    container_name: metoffice_agent_production
-    image: docker.cmclinnovations.com/metoffice_agent_production:1.0.0-SNAPSHOT
-    build:
-      context: .
-      target: prod
+  metofficeagent:
+    image: ghcr.io/metofficeagent:1.0.0-SNAPSHOT
+    deploy:
+      mode: replicated
+      replicas: 1
+      restart_policy:
+        condition: none
+    environment:
+      - STACK_NAME=${STACK_NAME}
+      - API_KEY=
+      - LAYERNAME=metoffice # also name of the table in PostGIS
+      - DATABASE=postgres   # currently ontop reads from the default database
+      - GEOSERVER_WORKSPACE=metoffice
+    configs:
+      - postgis
+      - blazegraph
+      - geoserver
+      - ontop
+    secrets:
+      - postgis_password
+      - geoserver_password
     ports:
       - "5000:5000"
     volumes:
-      # Link container output directory to local directory to access output files
-      - ./output:/app/output
+      - logs:/root/.jps
+    networks:
+      - stack
+volumes:
+  logs:
+    name: "logs"
