--- a/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-client:
-    image: docker.cmclinnovations.com/stack-client:1.5.3-hotfix-stack-data-uploader-SNAPSHOT
+    image: docker.cmclinnovations.com/stack-client:1.5.3
     configs:
       - postgis
       - geoserver
